<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/dp_24"
    tools:context=".ui.search.SearchFragment">

    <LinearLayout
        android:id="@+id/container_search"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginEnd="@dimen/dp_14"
        android:background="@drawable/bg_container_search"
        android:orientation="horizontal"
        android:padding="@dimen/dp_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_search">

        <EditText
            android:id="@+id/et_search"
            style="@style/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/dp_5"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center|start"
            android:hint="@string/search_hint"
            tools:ignore="Autofill" />
    </LinearLayout>

    <ImageView
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/filter_image"
        android:src="@drawable/ic_search_filter"
        app:layout_constraintBottom_toBottomOf="@id/container_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/container_search" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/im_data_empty"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_14"
        android:layout_below="@id/iv_information"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/waiting_to_search"
        android:textColor="@color/white_primary"
        android:textSize="@dimen/sp_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_information"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_7"
        android:layout_below="@id/tv_title"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/note_this_search_use_local_data_not_api"
        android:textColor="@color/gray"
        android:textSize="@dimen/sp_13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_result_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:layout_marginTop="@dimen/dp_14"
        app:layout_constraintTop_toBottomOf="@id/container_search"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        tools:listitem="@layout/item_list_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>