...
                    android:padding="@dimen/dp_10"
                    app:layout_constraintEnd_toStartOf="@id/iv_filter"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_info">

                    <TextView
                        android:id="@+id/tv_search"
                        style="@style/inputSearch"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dp_5"
                        android:fontFamily="@font/montserrat_regular"
...
