...
    <string name="from_everywhere">from everywhere</string>
    <string name="percentage">%d %%</string>
    <string name="watch">Watch</string>

    <!-- home fragment -->
    <string name="categories">Categories</string>
    <string name="categories_movies">Movies</string>
    <string name="categories_tv_shows">Tv Shows</string>
    <string name="release">Release: %s</string>
    <string name="filter_image">Image Filters</string>
    <string name="hello_username">Hello, Vinsmoke Sanji</string>
    <string name="menu_movie_favorite">Favorite</string>
    <string name="menus_image">Image Menus</string>
    <string name="poster_image">Poster Image</string>
...
